--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.6",
-    "mongoose": "^8.14.2",
+    "mongoose": "^8.15.1",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
