--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@auth/mongodb-adapter": "^3.9.1",
     "@tailwindcss/postcss": "^4.1.6",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
-    "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
