--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.9.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.6",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
@@ -20,6 +21,9 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
